testing/tests/src/test/resources/golden/CoreBindingsFailureTest/invalid-conditions.golden.txt
error: Can not find accessible `hello` member in test.Foo
Encountered:
  in graph for root-component test.MyComponent
  in entry-point getA: [Optional] test.ClassA
                       ^-[*1]----------------
  in [1*] inject-constructor test.ClassA()
  in its conditions declaration { runtime-conditions: [.., test.Invalid1, ..] }
                                                           ^-[*2]-------
  in [2*] feature test.Invalid1 [!test.Foo.hello]
                                  ^-[*3]--------
  here: [3*] test.Foo.hello
             ^~~~~~~~~~~~~~
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

error: Invalid condition expression '#invalid'
Encountered:
  in graph for root-component test.MyComponent
  in entry-point getA: [Optional] test.ClassA
                       ^-[*1]----------------
  in [1*] inject-constructor test.ClassA()
  in its conditions declaration { runtime-conditions: [.., test.Invalid2, ..] }
                                                           ^-[*2]-------
  in [2*] feature test.Invalid2 [<invalid-condition>]
                                 ^-[*3]-------------
  here: [3*] <invalid-condition>
             ^~~~~~~~~~~~~~~~~~~
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

error: Missing binding for test.Foo
NOTE: No known way to infer the binding
Encountered:
  in graph for root-component test.MyComponent
  in entry-point getA: [Optional] test.ClassA
                       ^-[*1]----------------
  in [1*] inject-constructor test.ClassA()
  in its non-static conditions { test.Foo.getFoo }
                                 ^-[*2]---------
  here: [2*] <missing>
             ^~~~~~~~~
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

error: Unable to reach boolean result in the given expression
Encountered:
  in graph for root-component test.MyComponent
  in entry-point getA: [Optional] test.ClassA
                       ^-[*1]----------------
  in [1*] inject-constructor test.ClassA()
  in its conditions declaration { runtime-conditions: [.., test.Invalid4, ..] }
                                                           ^-[*2]-------
  in [2*] feature test.Invalid4 [test.Foo.getFoo]
                                 ^-[*3]---------
  here: [3*] test.Foo.getFoo
             ^~~~~~~~~~~~~~~

Encountered:
  in graph for root-component test.MyComponent
  in entry-point getA: [Optional] test.ClassA
                       ^-[*1]----------------
  in [1*] inject-constructor test.ClassA()
  in its conditions declaration { runtime-conditions: [.., test.Invalid3, ..] }
                                                           ^-[*2]-------
  in [2*] feature test.Invalid3 [test.Foo.INSTANCE.getFoo]
                                 ^-[*3]------------------
  here: [3*] test.Foo.INSTANCE.getFoo
             ^~~~~~~~~~~~~~~~~~~~~~~~
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

warning: Non-static member of a Kotlin singleton object is used as a condition. Framework will try to find the object instance in the graph, which may not be what you wanted. Did you forget to add `INSTANCE.` to access the object from static context?
Encountered:
  in graph for root-component test.MyComponent
  in entry-point getA: [Optional] test.ClassA
                       ^-[*1]----------------
  in [1*] inject-constructor test.ClassA()
  in its conditions declaration { runtime-conditions: [.., test.Invalid4, ..] }
                                                           ^-[*2]-------
  in [2*] feature test.Invalid4 [test.Foo.getFoo]
                                 ^-[*3]---------
  here: [3*] test.Foo.getFoo
             ^~~~~~~~~~~~~~~